--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./libs/css/bootstrap.min.css">
     <link rel="stylesheet" href="./libs/css/bootstrap-vue.css">
 </head>
-<body>
+<body id="spy">
 <div id="app">
     <m-application></m-application>
 </div>
