--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="./libs/js/lodash.js"></script>
     <link rel="stylesheet" href="./libs/css/bootstrap.min.css">
     <link rel="stylesheet" href="./libs/css/bootstrap-vue.css">
+    <link rel="stylesheet" href="./libs/css/iconmoon.css">
 </head>
 <body id="spy">
 <div id="app">
