--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="theme-color" content="#3399cc">
     <title></title>
     <script src="./libs/js/jquery.min.js"></script>
     <script src="./libs/js/vue.js"></script>
