--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#3399cc">
+    <link rel="icon" type="image/png" href="./assets/favicon.png" sizes="228x228">
     <title></title>
     <script src="./libs/js/jquery.min.js"></script>
     <script src="./libs/js/vue.js"></script>
